Style inputs and calc button, fix font import,  improve readablity

--- a/css/main.scss
+++ b/css/main.scss
@@ -1,16 +1,24 @@
 // Fonts
-@import url('https://fonts.googleapis.com/css?family=Crete+Round|Poppins" rel="stylesheet');
+@import url('https://fonts.googleapis.com/css?family=Crete+Round|Poppins:400,500,600');
+$fontStack: 'poppins', sans-serif;
 
 // Colors
 $background: #171325;
 $primary: #5A45FF;
 $mainText: #eee;
 $secondaryText: #717597;
-$placeholder: #707070;
+$placeholder: #302E44;
 
 * {
   box-sizing: border-box;
   -webkit-tap-highlight-color: transparent;
+}
+
+input[type=number] {
+  &::-webkit-inner-spin-button,
+  &::-webkit-outer-spin-button {
+    -webkit-appearance: none; 
+  }
 }
 
 html, body {
@@ -20,8 +28,8 @@ html, body {
 }
 
 body {
+  font-family: $fontStack;
   padding: 0 3rem;
-  font-family: 'poppins', sans-serif;
 }
 
 .nav {
@@ -32,64 +40,138 @@ body {
   font-size: 1.5rem;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
+}
 
-  .logo {
-    display: grid;
-    align-items: center;
+.logo {
+  display: grid;
+  align-items: center;
 
-    a {
-      text-decoration: none;
-      color: $primary;
-    }
+  a {
+    text-decoration: none;
+    color: $primary;
   }
+}
 
-  .menu {
-    display: grid;
-    justify-content: end;
-    align-items: center;
-  }
+.menu {
+  display: grid;
+  justify-content: end;
+  align-items: center;
+}
 
-  .menuBtn {
-    display: inline-block;
-    padding: 8px 0;
-    cursor: pointer;
-  }
+.menuBtn {
+  display: inline-block;
+  padding: 8px 0;
+  cursor: pointer;
+}
 
-  .menuLine {
+.menuLine {
+  width: 1.5rem;
+  height: 0.15rem;
+  background-color: $primary;
+  transform: rotate(0);
+  transition: transform 250ms ease;
+
+  &::before,
+  &::after {
+    content: '';
+    position: absolute;
     width: 1.5rem;
-    height: 0.15rem;
+    height: .15rem;
     background-color: $primary;
-    transform: rotate(0);
-    transition: transform 250ms ease;
+    transition: margin-top 250ms ease 250ms, transform 250ms ease;
+  }
+
+  &::before {
+    margin-top: -0.4rem;
+  }
+
+  &::after {
+    margin-top: 0.4rem;
+  }
+}
+
+.menuBtn.open {
+  .menuLine {
+    transform: rotate(45deg);
+    transition: transform 250ms ease 250ms;
 
     &::before, &::after {
-      content: '';
-      position: absolute;
-      width: 1.5rem;
-      height: .15rem;
-      background-color: $primary;
-      transition: margin-top 250ms ease 250ms, transform 250ms ease;
-    }
-
-    &::before {
-      margin-top: -0.4rem;
-    }
-
-    &::after {
-      margin-top: 0.4rem;
+      margin-top: 0;
+      transform: rotate(90deg);
+      transition: margin-top 250ms ease, transform 250ms ease 250ms;
     }
   }
+}
 
-  .menuBtn.open {
-    .menuLine {
-      transform: rotate(45deg);
-      transition: transform 250ms ease 250ms;
+.inputsWrapper {
+  margin-top: 2rem;
+  text-align: center;
+}
 
-      &::before, &::after {
-        margin-top: 0;
-        transform: rotate(90deg);
-        transition: margin-top 250ms ease, transform 250ms ease 250ms;
-      }
+input {
+  font-family: $fontStack;
+  width: 100px;
+  font-size: 1rem;
+  padding: 0 0 0 0.8rem;
+  background: none;
+  border: none;
+  color: $mainText;
+
+  &:focus {
+    outline: none;
+  }
+
+  &::placeholder {
+    color: $placeholder;
+  }
+
+}
+
+.underline {
+  display: inline-block;
+
+  &:nth-child(1) {
+    margin-right: 2rem;
+  }
+
+  &::after {
+    content: '';
+    width: 75%;
+    height: 0.1rem;
+    background-color: $placeholder;
+    display: block;
+    margin: auto;
+    transform: translateY(2px);
+    transition: width 250ms ease, background-color 250ms ease;
+  }
+
+  &.effect::after {
+    width: 100%;
+    background-color: $primary;
+  }
+}
+
+.calculateWrapper {
+  // border: 1px solid red;
+  width: 100%;
+  height: 150px;
+  display: grid;
+  justify-content: center;
+  align-items: center;
+
+  .btn {
+    background-color: $primary;
+    color: $mainText;
+    padding: 0.75rem 1.5rem;
+    border-radius: 8px;
+    cursor: pointer;
+    border: none;
+    font-family: $fontStack;
+    font-size: 0.8rem;
+    font-weight: 500;
+    
+    &:focus {
+      outline: none;
     }
   }
 }
